tests/invalid/method_first_param_not_self/main.py
class Foo:
    x: int

    def get_x(this) -> int:
        return 0
